Sun May 23 07:30:58 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Note XOR decay bug also fixed in 1.0.21.

Sat May 22 13:31:38 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac,tests/Makefile.am: Only try to build zlib-vg.so if we
	  are found a suitable valgrind installed (otherwise it's a waste of
	  effort to build it, and the build will fail without the valgrind
	  headers).

Sat May 22 13:18:33 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac,tests/Makefile.am,tests/runtest.in,tests/zlib-vg.c: zlib
	  can produce "uninitialised" output from "initialised" input - the
	  output does decode to the input, so this is presumably just some
	  unused bits in the output, so we use an LD_PRELOAD hack to get
	  valgrind to check the input is initialised and then tell it that the
	  output is initialised.

Wed May 19 14:34:52 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/andmaybepostlist.cc,matcher/andmaybepostlist.h,
	  matcher/orpostlist.cc: Fix a bug causing documents to be skipped
	  when OR decayed to AND_MAYBE, if the new RHS was behind the LHS
	  at the time of the decay.  Fixes #476.
	* tests/api_backend.cc: Add test case ordecay2 as a regression test
	  of this.  Also, remove some debug output in ordecay1, to speed it
	  up quite a bit.

Wed May 19 11:48:07 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/orpostlist.cc,tests/api_backend.cc: Fix a bug in the
	  decay from OR to AND: if the decay happened when the two
	  sub-postlists were on different docids, but the higher of those
	  docids actually occurred in both postlists, the higher docid
	  would be incorrectly skipped.  Add regression test ordecay1 to
	  test this.

Wed May 19 10:36:55 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/api_backend.cc,tests/api_compact.cc,
	  tests/harness/testrunner.cc,tests/harness/testrunner.h: Add new
	  test backend selection flag "generated", to select only backends