@@ -1,3 +1,12 @@
+Tue May 25 04:11:53 GMT 2010  Olly Betts <olly@survex.com>
+
+	* tests/api_backend.cc: make_ordecay1_db and make_ordecay2_db end up
+	  looping over at least 4 billion values (or possibly infinitely) on
+	  platforms where sizeof(long) == 8.  The two databases are very
+	  similar and the latter one works for the former test, so use the
+	  same db for both tests, and rewrite the generator to work
+	  portably.
+
 Sun May 23 07:30:58 GMT 2010  Olly Betts <olly@survex.com>
 
 	* tests/api_backend.cc: Note XOR decay bug also fixed in 1.0.21.
